# kcf_tld_tracking_ros

./: LICENSE  README.md
KCF_TLD/KCF/: CMakeLists.txt  package.xml
KCF_TLD/KCF/launch/: kcf.launch
KCF_TLD/KCF/msg/: BoundingBox.msg
KCF_TLD/KCF/src/cf_libs/kcf/: .kcf_tracker.hpp.swp  kcf_tracker.hpp
KCF_TLD/KCF/src/main/: main_dsst.cpp  main_kcf.cpp
KCF_TLD/KCFtld/: CMakeLists.txt  CMakeLists2.txt  package.xml
KCF_TLD/KCFtld/launch/: kcftld.launch
KCF_TLD/KCFtld/sample/: DSSTtld_sample_image_sequence_linux.sh  DSSTtld_sample_image_sequence_windows.bat  DSSTtld_sample_video_linux.sh  DSSTtld_sample_video_windows.bat  KCFtld_sample_image_sequence_linux.sh  KCFtld_sample_image_sequence_windows.bat  KCFtld_sample_video_linux.sh  KCFtld_sample_video_windows.bat  config-sample.cfg  sample_image_sequence.cfg  sample_video.cfg
KCF_TLD/KCFtld/src/libopentld/imacq/: ImAcq.cpp  ImAcq.h
KCF_TLD/KCFtld/src/opentld/: CMakeLists.txt  OpenTLD.cpp
KCF_TLD/KCFtld/src/opentld/main/: Config.cpp  Gui.cpp~  Main.cpp  Main.h
KCF_TLD/OpenTLD/: .gitignore  AUTHORS  CMakeLists.txt  README.md  package.xml
KCF_TLD/OpenTLD/debian/: changelog  opentld.1
KCF_TLD/OpenTLD/launch/: opentld.launch
KCF_TLD/OpenTLD/res/packaging/: manpage.pod
KCF_TLD/OpenTLD/src/libopentld/: CMakeLists.txt
KCF_TLD/OpenTLD/src/opentld/: CMakeLists.txt  OpenTLD.cpp  QOpenTLD.cpp
KCF_TLD/OpenTLD/src/opentld/main/: Config.cpp  Main.cpp  Main.h  Settings.cpp  Trajectory.cpp
KCF_TLD/OpenTLD/src/opentld/qopentld/: ConfigDialog.cpp  ConfigDialog.ui
